--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.java</groupId>
-    <artifactId>BasketMall</artifactId>
+    <groupId>io.github.liuyuchen777.BasketMall</groupId>
+    <artifactId>basketmall</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>BasketMall</name>
-    <description>BasketMall</description>
+    <name>basketmall</name>
+    <description>basketmall</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -22,11 +22,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -39,14 +34,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
