--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node ./src/index.js"
+    "dev": "node ./src/index.js",
+    "test": "node ./test/test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-session": "^2.0.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-easy-helper": "^2.5.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.4.1"
   }
 }
