--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-easy-helper": "^2.5.1",
+    "express-jwt": "^7.7.5",
     "fs": "^0.0.1-security",
     "mongoose": "^6.4.1"
   }
