--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "node ./src/index.js",
-    "test": "node ./test/test.js"
+    "test": "node ./test/test.js",
+    "prod": "node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-easy-helper": "^2.5.1",
     "express-jwt": "^7.7.5",
