--- a/backend/package.json
+++ b/backend/package.json
@@ -2,25 +2,63 @@
   "name": "tls-1on1-backend",
   "version": "1.0.0",
   "description": "backend with express",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
+  "type": "commonjs",
   "scripts": {
-    "dev": "node ./src/index.js",
-    "test": "node ./test/test.js",
-    "prod": "node ./src/index.js"
+    "start": "npm run build && npm run serve",
+    "serve": "node ./build/index.js",
+    "build": "npm run clean && npm run build-ts",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-node": "nodemon -r dotenv/config build/server.js",
+    "clean": "rimraf ./build",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "eslint": "eslint . --ext .js,.ts",
+    "upgrade": "npm update --save-dev && npm update --save",
+    "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "liuyuchen777",
+  "license": "Apache-2.0",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "express-easy-helper": "^2.5.1",
-    "express-jwt": "^7.7.5",
-    "fs": "^0.0.1-security",
+    "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.1"
+    "lodash": "^4.17.21",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/express-jwt": "^7.4.2",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^14.18.34",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "colors": "^1.4.0",
+    "concurrently": "^5.3.0",
+    "dotenv": "^8.6.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.4"
   }
 }
