--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: "3.1"
 
 services:
   mongo:
@@ -20,5 +20,5 @@ services:
 
   tls1on1-back:
     image: tls1on1-back
-    ports: 
+    ports:
       - 8080:8080
