Integrate auth0 to backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 PORT=8080
 DB_CONNECTION_STRING=mongodb://localhost:27017/tls1on1  # mongodb connection string
-DEFAULT_PASSWORD=123456 
-JWT_SECRET=my_secret_12345
+AUTH0_IDENTIFIER='https://[auth0-id].[region].auth0.com/api/v2/'
+AUTH0_BASE_URL='https://[auth0-id].[region].auth0.com/'
