--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "serve": "node ./build/index.js",
     "build": "npm run clean && npm run build-ts",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "watch-node": "nodemon -r dotenv/config build/server.js",
+    "watch-node": "nodemon -r dotenv/config build/index.js",
     "clean": "rimraf ./build",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
@@ -22,35 +22,18 @@
   "author": "liuyuchen777",
   "license": "Apache-2.0",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-jwt": "^7.7.7",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.8.0",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "express-oauth2-jwt-bearer": "^1.3.0",
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.1",
-    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
-    "@types/express-jwt": "^7.4.2",
-    "@types/helmet": "^4.0.0",
-    "@types/jest": "^26.0.24",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.191",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^14.18.34",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
-    "colors": "^1.4.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.6.0",
     "eslint": "^7.32.0",
@@ -59,7 +42,6 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "supertest": "^6.3.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
